# rgb-tests

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  STRESS.md  compose.yml  entrypoint.sh  submodules-rev.sh
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
tests/: chain_nets.rs  compose.yaml  coverage.sh  esplora-private-nodes.conf  issuance.rs  start_services.sh  stress.rs  transfers.rs  utils_integrity.rs  validation.rs
tests/fixtures/: attack_bundles_pubWitness_data_input_sequence.json  attack_bundles_pubWitness_data_input_sequence.yaml  attack_chain.json  attack_chain.yaml  attack_genesis_schema_id.json  attack_genesis_schema_id.yaml  attack_genesis_testnet.json  attack_genesis_testnet.yaml  attack_resolver_error.json  attack_resolver_error.yaml  consignment_A.json  consignment_A.rgb  consignment_A.yaml  consignment_B.json  consignment_B.rgb  consignment_B.yaml  consignment_C.json  consignment_C.rgb  consignment_D.json  consignment_D.rgb
tests/utils/: chain.rs  helpers.rs  mod.rs
tests/utils/wallet/: bdk.rs  bp.rs  mod.rs
