[package]
name = "rgb-tests"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Dr Maxim Orlovsky <orlovsky@lnp-bp.org>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/rgb-protocol/rgb-tests"
homepage = "https://github.com/rgb-protocol/rgb-tests"
license = "Apache-2.0"
description = "RGB tests"

[dependencies]
amplify = "4.8.1"
bdk_wallet = { version = "2.0.0", features = [
    "file_store",
    "std",
] }
bdk_electrum = "0.23.0"
bdk_esplora = "0.22.0"
bitcoin_hashes = "0.14.0"
bp-electrum = { version = "=0.11.1-alpha.2" }
bp-esplora = { version = "=0.11.1-alpha.2", features = [
    "blocking-https",
] }
bp-wallet = { version = "=0.11.1-alpha.2", features = [
    "electrum",
    "esplora",
    "fs",
    "signers"
] }
chrono = "0.4.41"
crossbeam = "0.8"
dhat = "0.3"
file-format = { version = "0.25.0", features = [
    "reader",
] }
lazy_static = { version = "1.5.0", default-features = false }
libc = "0.2"
nix = { version = "0.30", features = [
    "process",
] }
once_cell = "1.19.0"
rand = "0.8.5"
rstest = "0.19.0"
rstest_reuse = "0.6.0"
serde = { version = "1", features = [
    "derive",
] }
serde_json = "1.0.140"
serial_test = "3.2.0"
signal-hook = "0.3"
strum = { version = "0.26.2", features = [
    "derive",
] }
strum_macros = "0.26.2"
sysinfo = "0.37"
time = "0.3.34"

# RGB-related deps
## rgb-api
rgb-api = { path = "./rgb-api", features = [
    "bp",
    "bdk",
    "electrum_blocking",
    "esplora_blocking",
    "fs",
] }
rgb-psbt-utils = { path = "./rgb-api/psbt", features = [
    "bp",
] }
## altered_submodules/rgb (cannot use path, see https://github.com/rust-lang/cargo/issues/8639)
rgb_altered = { git = "https://github.com/rgb-protocol/rgb-api", branch = "revert_fix_same_blinded_transfer", package = "rgb-api", features = [
    "bp",
    "bdk",
    "electrum_blocking",
    "esplora_blocking",
    "fs",
], optional = true }
psrgbt_altered = { git = "https://github.com/rgb-protocol/rgb-api", branch = "revert_fix_same_blinded_transfer", package = "rgb-psbt-utils", features = [
    "bp",
], optional = true }
## rgb-consensus
rgb-consensus = { path = "./rgb-consensus", features = [
    "rand",
] }
## rgb-ops
rgb-ops = { path = "./rgb-ops", features = [
    "fs",
] }
## rgb-schemas
rgb-schemas = { path = "./rgb-schemas" }
## strict-encoding
rgb-strict-encoding = { path = "./rgb-strict-encoding/rust" }
## strict-types
rgb-strict-types = { path = "./rgb-strict-types" }

[patch.crates-io]
# patching all RGB-related deps, to measure code coverage
## aluvm
rgb-aluvm = { path = "./rgb-aluvm" }
## ascii-armor
rgb-ascii-armor = { path = "./rgb-ascii-armor" }
## rgb-api
rgb-api = { path = "./rgb-api" }
rgb-psbt-utils = { path = "./rgb-api/psbt" }
## rgb-consensus
rgb-consensus = { path = "./rgb-consensus" }
## rgb-ops
rgb-ops = { path = "./rgb-ops" }
rgb-invoicing = { path = "./rgb-ops/invoice" }
## rgb-schemas
rgb-schemas = { path = "./rgb-schemas" }
## strict-encoding
rgb-strict-encoding = { path = "./rgb-strict-encoding/rust" }
rgb-strict-encoding-derive = { path = "./rgb-strict-encoding/rust/derive" }
## strict-types
rgb-strict-types = { path = "./rgb-strict-types" }

[features]
default = []
altered = [
    "rgb_altered",
    "psrgbt_altered",
]
memprof = [] # enable memory profiling

[profile.reldebug]
inherits = "release"
debug = 1
